test/tests/LambdaAmbiguous.expected
LambdaAmbiguous.panda:10:27: error: call to 'test' is ambiguous. The following methods are equally good matches:
    method anonymous.BareCode.test(f:(panda.core.Int16)=>(panda.core.Int16)):panda.core.Int16 (LambdaAmbiguous.panda:5:1)
    method anonymous.BareCode.test(f:(panda.core.Int8)=>(panda.core.Int8)):panda.core.Int8 (LambdaAmbiguous.panda:1:1)
1 error
